samples/task/invalid/R26.dita
<?xml version="1.0" encoding="UTF-8"?>
<task>
  <title>Test Title</title>
  <shortdesc>Short description</shortdesc>
  <prolog/>
  <taskbody>
    <steps><step><cmd/><substeps><substep><info><p>info</p></info></substep></substeps></step></steps>
  </taskbody>
</task>